# bgslib

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
demos/: adaptive_background_learning_stream.cpp  adaptive_selective_bg_learning_stream.cpp  frame_difference_stream.cpp  static_frame_difference_stream.cpp  weighted_moving_mean_stream.cpp  weighted_moving_variance_stream.cpp
evals/: evaluate_algorithm.cpp
examples/: camera_stream.cpp  interactive_camera_stream.cpp  list_algorithms.cpp  performance_metrics.cpp  update_params.cpp
include/: bgslib.hpp
